# google-flights-mcp

./: .gitignore  CODEX_GUIDE.md  README.ja.md  README.md  pyproject.toml
src/: flights-mcp-server.py
src/google_flights_mcp/: __init__.py  airports_cache.json  server.py
