[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-flights-mcp"
version = "0.1.0"
description = "MCP server for flight search and travel planning with fast-flights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fast-flights>=2.1",
    "mcp[cli]",
    "playwright>=1.49.1",
]

[project.scripts]
google-flights-mcp = "google_flights_mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
